# asini

./: .gitignore  AGENTS.md  CLAUDE.md  package-lock.json  package.json  pnpm-lock.yaml
.claude/: settings.json  settings.local.json
.claude/agents/: package-api-reviewer.md
.claude/commands/: db-migration.md  npm-publish.md
.github/: copilot-instructions.md  copilot-setup-steps.yml
.github/agents/: calendar-bridge.md  extract-cancellation-policy.md  extract-memory-adapter.md  extract-pricing-engine.md  extract-recurrence.md  scaffold-thebest.md  scheduler-core.md  svelte-components.md  thebest-auth.md  thebest-guide-tours.md  thebest-public-booking.md  thebest-styling.md
.github/workflows/: auto-merge-copilot.yml  chain-issues.yml  ci.yml
apps/thebest/: .env.example  .gitignore  drizzle.config.ts  package.json  vite.config.ts
apps/yoga/: CLAUDE.md  package.json
docs/plans/: 2026-03-06-extract-notify-payments-packages.md  2026-03-06-step9-real-bookings.md  2026-03-07-guide-panel-ux-v2-design.md  2026-03-07-guide-panel-ux-v2-plan.md  2026-03-07-route-group-split.md  2026-03-07-svelte-media-svelte-qr.md  2026-03-07-svelte-qr-svelte-media-design.md  (+1 more)
issues/: 23.md
issues/24/: assignee
scripts/: sync-yoga.sh
tools/yoga-scraper/: .env.example  CLAUDE.md  README.md  _analyze_urls.py  _dashboard.py  _db_state.py  _overnight.py  _validate.py  _validate_output.txt  _validate_output2.txt  _validate_output3.txt  pyproject.toml
tools/yoga-scraper/src/: cli.py  db.py  models.py  normalize.py  scrape.py  scrape_fitssey.py  seed_from_places.py  tracking.py
(+75 files in other folders)
