[project]
name = "yoga-scraper"
version = "1.0.0"
description = "Data pipeline for szkolyjogi.pl — discovers, scrapes, and enriches yoga school data"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "anthropic>=0.40.0",
    "html2text>=2024.2.26",
    "pydantic>=2.0.0",
    "libsql-client>=0.3.0",
    "crawl4ai>=0.4.0",
    "playwright>=1.40.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
yoga-scraper = "src.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
